@@ -40,6 +40,8 @@ class build (Command):
          "compile extensions and libraries with debugging information"),
         ('force', 'f',
          "forcibly build everything (ignore file timestamps)"),
+        ('executable=', 'e',
+         "specify final destination interpreter path (build.py)"),
         ]
 
     boolean_options = ['debug', 'force']
@@ -61,6 +63,7 @@ class build (Command):
         self.compiler = None
         self.debug = None
         self.force = 0
+        self.executable = None
 
     def finalize_options (self):
 
@@ -93,6 +96,8 @@ class build (Command):
             self.build_scripts = os.path.join(self.build_base,
                                               'scripts-' + sys.version[0:3])
 
+        if self.executable is None:
+            self.executable = os.path.normpath(sys.executable)
     # finalize_options ()
 
 
